# sample-project-airflow

./: .gitignore  Makefile  README.md  pyproject.toml
dags/: placeholder_dag.py
dags/utils/: functions.py
k8s/local/: Chart.yaml  values.yaml
k8s/local/templates/: dags_pv.yaml  dags_pvc.yaml
tests/: conftest.py  test_dagbag.py
